J: - fix spacing

--- a/client/src/components/User/ProfileDeckItem.css
+++ b/client/src/components/User/ProfileDeckItem.css
@@ -130,7 +130,7 @@ div .profile-back-text {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 2em;
+  margin-top: 2.5em;
 }
 
 .link-input {
